# soldis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: mirror-to-gitlab.yml
examples/: dev.ipynb
soldis/: __init__.py  dense.py  newton.py  typing.py
soldis/linear/: __init__.py  _core.py  cg.py  gmres.py  sparse.py
soldis/newton/: __init__.py  _core.py  newton.py
tests/: test_implicit_diff.py
